# music262

./: .gitignore  CMakeLists.txt  HOW_TO_RUN.md  README.md
.github/workflows/: cpp-tests.yml
client/src/: main.cpp
docs/: Doxyfile  README.md  gui_client.md  mainpage.dox  peer_broadcast_fix.md  peer_to_peer.md
docs/notebook/: notebook.md  v1notebook.md  v2notebook.md
src/: CMakeLists.txt
src/client/: CMakeCache.txt  CMakeLists.txt  README.md  audio_service_grpc.cpp  audioplayer.cpp  client.cpp  client_factory.cpp  main.cpp  peer_network.cpp  peer_service.cpp  peer_service_grpc.cpp  sync_clock.cpp
src/client/include/: audio_service_interface.h  audioplayer.h  client.h  client_handler.grpc.pb.cc  client_handler.grpc.pb.h  client_handler.pb.cc  client_handler.pb.h  client_handler.proto  peer_network.h  peer_service.h  peer_service_interface.h  sync_clock.h  wavheader.h
src/client_gui/: CMakeLists.txt  main.cpp  mainwindow.cpp
src/client_gui/include/: mainwindow.h
src/common/: CMakeLists.txt  README.md
src/common/include/: logger.h
src/proto/: CMakeLists.txt  audio_service.grpc.pb.cc  audio_service.grpc.pb.h  audio_service.pb.cc  audio_service.pb.h  audio_service.proto  audio_sync.grpc.pb.cc  audio_sync.grpc.pb.h  audio_sync.pb.cc  audio_sync.pb.h  audio_sync.proto
src/server/: CMakeLists.txt  README.md  audio_server.cpp  main.cpp
src/server/include/: audio_server.h
tests/: CMakeLists.txt  README.md  audioplayer_callback_test.cpp  audioplayer_coreaudio_test.cpp  audioplayer_real_file_test.cpp  audioplayer_test.cpp  test_peer_network.cpp
tests/client/: CMakeLists.txt  audioplayer_callback_test.cpp  audioplayer_coreaudio_test.cpp  audioplayer_mock_test.cpp  audioplayer_test.cpp  client_test.cpp  peer_network_test.cpp  sync_clock_test.cpp
tests/common/: CMakeLists.txt
tests/server/: CMakeLists.txt  audio_server_test.cpp
tests/testlib/: CMakeLists.txt
tests/testlib/include/: coreaudio_mocks.h  test_utils.h
tests/testlib/src/: coreaudio_mocks.cpp
